--- a/index.html
+++ b/index.html
@@ -84,53 +84,51 @@
 
   <script>
     const TAU = Math.PI * 2;
-    const DEG = Math.PI / 180;
+  
+    // small helpers
     function cross(a,b){ return {x:a.y*b.z - a.z*b.y, y:a.z*b.x - a.x*b.z, z:a.x*b.y - a.y*b.x}; }
     function norm(v){ const n = Math.hypot(v.x,v.y,v.z)||1; return {x:v.x/n,y:v.y/n,z:v.z/n}; }
+    function unwrap(delta){
+      if (delta >  Math.PI) return delta - TAU;
+      if (delta < -Math.PI) return delta + TAU;
+      return delta;
+    }
   
-    class ShortMotionTracer {
+    class AccelCircleOnly {
       constructor(canvas, dotEl){
         this.canvas = canvas;
         this.ctx = canvas.getContext('2d');
         this.dotEl = dotEl;
+  
+        // --- params you can tune ---
+        this.gTau = 0.25;           // gravity LPF time-constant (s)
+        this.accPlanarMin = 1.1;    // m/s^2: ignore weaker signals
+        this.minOmega = 1.0;        // rad/s: min angular rate of the planar accel angle
+        this.segMinDur = 0.35;      // s: valid revolution min duration
+        this.segMaxDur = 6.00;      // s: valid revolution max duration
+        this.signCoherenceMin = 0.80; // mostly one direction
+        this.gapMsAllow = 280;      // ms: tolerate short gaps before reset
+        this.progressTarget = Math.PI*2*0.92; // ~330°
+  
+        // UI
+        this.uiAlpha = 0.25;
+  
+        // internal state
+        this.g = null;              // gravity estimate (m/s^2)
+        this.lastT = 0;
+        this.uLP = 0; this.vLP = 0; // smoothed planar accel
+        this.avLP = 0;              // smoothed magnitude
+        this.theta = 0;             // current planar angle
+        this.prevTheta = null;
+        this.thetaStart = 0;        // angle at segment start
+        this.progress = 0;
+        this.posDur = 0; this.negDur = 0;
+        this.segStartT = null;
+        this.lastGoodMs = 0;
+  
+        // canvas metrics
         this.dpr = Math.max(1, window.devicePixelRatio || 1);
         window.addEventListener('resize', () => { this.resize(); this.resetCanvas(); }, {passive:true});
-  
-        // Gravity LPF
-        this.g = null;
-        this.gTau = 0.25;          // s
-        this.gUpdateGyroMax = 60;  // deg/s
-  
-        // Circle model & gates
-        this.omegaMin = 35 * DEG;  // rad/s about gravity
-        this.accPlanarMin = 1.1;   // m/s^2
-        this.rMin = 0.03;          // meters
-        this.rMax = 0.50;          // meters
-  
-        // Progress / detection
-        this.progress = 0;
-        this.progressTarget = TAU * 0.92; // ~330°
-        this.theta = 0;
-        this.thetaStart = 0;
-        this.posDur = 0; this.negDur = 0;
-        this.signCoherenceMin = 0.80;     // slightly relaxed
-        this.segStartT = null;
-        this.segMinDur = 0.30;            // wider acceptance
-        this.segMaxDur = 6.00;
-        this.gapMsAllow = 280;            // tolerate short interruptions
-  
-        // Radius estimate smoothing
-        this.rLP = null;
-        this.rLPalpha = 0.2;
-  
-        // UI/path state
-        this._lastXPix = null; this._lastYPix = null;
-        this.uiX = 0; this.uiY = 0; this.uiAlpha = 0.25;
-  
-        // Debounce detection
-        this.lastDetection = 0;
-        this.cooldownMs = 2000;
-  
         this.resize();
         this.resetCanvas();
       }
@@ -142,14 +140,9 @@
         this.w = this.canvas.width; this.h = this.canvas.height;
         this.cx = this.w/2; this.cy = this.h/2;
   
-        // Compute drawable circle radius (inside the round frame)
-        this.padPx = 6 * this.dpr;                 // inner padding
-        this.R = Math.min(this.cx, this.cy) - this.padPx; // max pixel radius for path/dot
+        this.padPx = 6 * this.dpr;
+        this.R = Math.min(this.cx, this.cy) - this.padPx; // drawable radius
   
-        // Map meters -> pixels so rMax fits exactly inside the circle
-        this.pxPerMeter = this.R / this.rMax;
-  
-        // Canvas styles
         this.ctx.setTransform(1,0,0,1,0,0);
         this.ctx.lineWidth = 2*this.dpr;
         this.ctx.lineCap='round'; this.ctx.lineJoin='round';
@@ -158,49 +151,46 @@
       }
   
       resetCanvas(){
+        // clear + boundary
         this.ctx.clearRect(0,0,this.w,this.h);
-  
-        // Draw the boundary circle
         this.ctx.save();
         this.ctx.globalAlpha = 0.18;
-        this.ctx.beginPath(); this.ctx.arc(this.cx, this.cy, this.R, 0, TAU);
-        this.ctx.stroke();
+        this.ctx.beginPath(); this.ctx.arc(this.cx, this.cy, this.R, 0, TAU); this.ctx.stroke();
         this.ctx.restore();
-  
-        // Set a clip so path can never draw outside
+        // clip so path stays inside
         this.ctx.save();
         this.ctx.beginPath(); this.ctx.arc(this.cx, this.cy, this.R - this.ctx.lineWidth*0.5, 0, TAU);
         this.ctx.clip();
         this.pathStarted = false;
   
-        // Reset path/detection state
-        this.progress = 0; this.theta = 0; this.thetaStart = 0;
-        this.posDur = 0; this.negDur = 0; this.segStartT = null; this.rLP = null;
+        // reset state
+        this.prevTheta = null;
+        this.theta = 0; this.thetaStart = 0;
+        this.progress = 0;
+        this.posDur = 0; this.negDur = 0;
+        this.segStartT = null;
+        this.uLP = 0; this.vLP = 0; this.avLP = 0;
+        this._lastXPix = this.cx; this._lastYPix = this.cy;
         this._renderProgress();
-        this._lastXPix = null; this._lastYPix = null;
-        this._moveDot(); // re-center dot
-        // Note: we keep the clipping active (ctx.restore() not called) until next reset
+        this._moveDot(); // center the dot
       }
   
-      addSample(wx_deg, wy_deg, wz_deg, acc, accG){
+      addSample(acc, accG){
         const now = performance.now();
-        const dt = (this._lastT ? Math.max(0.001, (now - this._lastT)/1000) : 0.016);
-        this._lastT = now;
+        const dt = this.lastT ? Math.max(0.001, (now - this.lastT)/1000) : 0.016;
+        this.lastT = now;
   
-        // Gravity LPF
-        if (accG) {
+        // Gravity LPF from accelerationIncludingGravity
+        if (accG && [accG.x,accG.y,accG.z].every(v => typeof v === 'number')) {
           if (!this.g) this.g = {x:accG.x||0, y:accG.y||0, z:accG.z||0};
-          const gyroMag = Math.hypot(wx_deg,wy_deg,wz_deg);
-          if (gyroMag < this.gUpdateGyroMax) {
-            const alpha = Math.exp(-dt/this.gTau);
-            this.g.x = alpha*this.g.x + (1-alpha)*(accG.x||0);
-            this.g.y = alpha*this.g.y + (1-alpha)*(accG.y||0);
-            this.g.z = alpha*this.g.z + (1-alpha)*(accG.z||0);
-          }
+          const a = Math.exp(-dt/this.gTau);
+          this.g.x = a*this.g.x + (1-a)*(accG.x||0);
+          this.g.y = a*this.g.y + (1-a)*(accG.y||0);
+          this.g.z = a*this.g.z + (1-a)*(accG.z||0);
         }
         if (!this.g) return;
   
-        // Linear accel (prefer e.acceleration)
+        // Linear acceleration (prefer e.acceleration; else aInclG - g)
         let ax=0, ay=0, az=0;
         if (acc && [acc.x,acc.y,acc.z].every(v => typeof v === 'number')) {
           ax=acc.x||0; ay=acc.y||0; az=acc.z||0;
@@ -208,44 +198,46 @@
           ax=(accG.x||0)-this.g.x; ay=(accG.y||0)-this.g.y; az=(accG.z||0)-this.g.z;
         }
   
-        // World plane ⟂ gravity
+        // Project into plane ⟂ gravity
         const gn = norm(this.g);
         const ref = (Math.abs(gn.z) < 0.9) ? {x:0,y:0,z:1} : {x:1,y:0,z:0};
         const e1 = norm(cross(gn, ref));   // plane axis #1
         const e2 = cross(gn, e1);          // plane axis #2
-  
-        // Planar acceleration
         const dotg = ax*gn.x + ay*gn.y + az*gn.z;
         const px = ax - dotg*gn.x, py = ay - dotg*gn.y, pz = az - dotg*gn.z;
         const u = px*e1.x + py*e1.y + pz*e1.z;
         const v = px*e2.x + py*e2.y + pz*e2.z;
-        const aPlanar = Math.hypot(u,v);
   
-        // Angular velocity about plane normal (rad/s)
-        const w_par = (wx_deg*gn.x + wy_deg*gn.y + wz_deg*gn.z) * DEG;
+        // Smooth planar vector for stability
+        const beta = Math.exp(-dt/0.06); // ~60 ms smoothing
+        this.uLP = beta*this.uLP + (1-beta)*u;
+        this.vLP = beta*this.vLP + (1-beta)*v;
+        const aPlanar = Math.hypot(this.uLP, this.vLP);
+        this.avLP = 0.9*this.avLP + 0.1*aPlanar; // slow magnitude display
   
-        // --- Gate: only integrate when it looks like a circle ---
-        const gate = Math.abs(w_par) >= this.omegaMin && aPlanar >= this.accPlanarMin;
+        // Angle from planar accel
+        const thetaNow = Math.atan2(this.vLP, this.uLP);
+        if (this.prevTheta == null) this.prevTheta = thetaNow;
+  
+        // Angular rate from unwrapped delta
+        const dtheta = unwrap(thetaNow - this.prevTheta);
+        const omega = Math.abs(dtheta) / dt;
+  
+        // GATE: require enough planar accel AND enough angular rate
+        const gate = (aPlanar >= this.accPlanarMin) && (omega >= this.minOmega);
   
         // UI text
-        document.getElementById('gyroData').textContent =
-          `X: ${wx_deg.toFixed(1)}, Y: ${wy_deg.toFixed(1)}, Z: ${wz_deg.toFixed(1)}`;
-        document.getElementById('planarA').textContent = aPlanar.toFixed(2);
+        document.getElementById('planarA')?.replaceChildren(document.createTextNode(this.avLP.toFixed(2)));
   
         if (gate) {
-          // radius estimate r=a/ω² (clamped)
-          const rEst = Math.max(this.rMin, Math.min(this.rMax, aPlanar / (w_par*w_par + 1e-6)));
-          this.rLP = (this.rLP==null) ? rEst : (this.rLP + this.rLPalpha*(rEst - this.rLP));
-  
-          // start a segment when gate first opens
+          // start segment if needed
           if (this.segStartT == null) {
             this.segStartT = now;
             this.thetaStart = this.theta;
             this.posDur = 0; this.negDur = 0;
           }
   
-          // integrate angle
-          const dtheta = w_par * dt;
+          // integrate angle & durations
           this.theta += dtheta;
           if (dtheta > 0) this.posDur += dt; else if (dtheta < 0) this.negDur += dt;
   
@@ -254,18 +246,30 @@
           this.progress = Math.min(1, traveled / this.progressTarget);
           this._renderProgress();
   
-          // draw point (CLAMP into circle radius)
-          this._drawPoint(this.theta, this.rLP);
+          // draw point on a fixed ring inside the circle (just direction)
+          const ring = this.R * 0.65; // 65% of boundary radius
+          const x = this.cx + ring * Math.cos(thetaNow);
+          const y = this.cy + ring * Math.sin(thetaNow);
+          if (!this.pathStarted) { this.ctx.beginPath(); this.ctx.moveTo(x,y); this.pathStarted = true; }
+          else { this.ctx.lineTo(x,y); this.ctx.stroke(); }
+          this._lastXPix = x; this._lastYPix = y;
   
           // detection check
           this._maybeDetect(now);
+          this.lastGoodMs = now;
         } else {
-          // brief gate drops allowed; longer gaps reset the segment
-          this._maybePauseOrReset(now);
+          // allow brief drop; longer -> reset segment (keep drawn path)
+          if (this.segStartT != null) {
+            if (!this.lastGoodMs) this.lastGoodMs = now;
+            if ((now - this.lastGoodMs) > this.gapMsAllow) this._resetSegment(now);
+          }
+          // decay progress display slightly so it doesn't "stick"
+          this.progress = Math.max(0, this.progress - 0.02);
+          this._renderProgress();
         }
   
-        // Move green dot to the last drawn pixel position (same coords as path)
-        this._moveDot();
+        this.prevTheta = thetaNow;
+        this._moveDot(); // keep dot exactly on the drawn path coords
       }
   
       _maybeDetect(now){
@@ -273,79 +277,53 @@
         const dur = this.segStartT ? (now - this.segStartT)/1000 : 0;
         const totalTurn = this.posDur + this.negDur;
         const signCoh = totalTurn > 0 ? Math.max(this.posDur, this.negDur) / totalTurn : 0;
-        const cooled = (now - this.lastDetection) > this.cooldownMs;
-        const withinDur = (dur >= this.segMinDur && dur <= this.segMaxDur);
   
-        if (cooled && withinDur && signCoh >= this.signCoherenceMin) {
-          this.lastDetection = now;
+        const withinDur = (dur >= this.segMinDur && dur <= this.segMaxDur);
+        if (withinDur && signCoh >= this.signCoherenceMin) {
           this._onDetected();
           this._resetSegment(now);
         }
       }
   
-      _maybePauseOrReset(nowMs){
-        if (this.segStartT != null) {
-          this._gapStart = this._gapStart ?? nowMs;
-          if ((nowMs - this._gapStart) > this.gapMsAllow) {
-            this._resetSegment(nowMs);
-            this._gapStart = null;
-          }
-        }
-        // decay progress display slightly so 100% doesn't “stick”
-        this.progress = Math.max(0, this.progress - 0.02);
-        this._renderProgress();
-      }
-  
-      _resetSegment(nowMs){
+      _resetSegment(now){
         this.segStartT = null;
-        this.thetaStart = this.theta; // keep absolute theta for continuity
+        this.thetaStart = this.theta;
         this.progress = 0;
         this.posDur = 0; this.negDur = 0;
-        this.rLP = null;
         this._renderProgress();
       }
   
       _renderProgress(){
         const pct = Math.round(this.progress * 100);
-        document.getElementById('confidenceBar').style.width = pct + '%';
-        document.getElementById('confidenceText').textContent = `Revolution progress: ${pct}%`;
-      }
-  
-      _drawPoint(theta, rMeters){
-        // Convert meters -> pixels and clamp to drawable circle radius
-        const rPix = Math.max(0, Math.min(this.R, rMeters * this.pxPerMeter));
-        const x = this.cx + rPix * Math.cos(theta);
-        const y = this.cy + rPix * Math.sin(theta);
-  
-        if (!this.pathStarted) { this.ctx.beginPath(); this.ctx.moveTo(x,y); this.pathStarted = true; }
-        else { this.ctx.lineTo(x,y); this.ctx.stroke(); }
-  
-        this._lastXPix = x; this._lastYPix = y; // store exact pixel coords used for drawing
+        const bar = document.getElementById('confidenceBar');
+        const txt = document.getElementById('confidenceText');
+        if (bar) bar.style.width = pct + '%';
+        if (txt) txt.textContent = `Revolution progress: ${pct}%`;
       }
   
       _moveDot(){
-        // Use the same pixel coordinates as the path, translated to CSS space
         const x = (this._lastXPix ?? this.cx), y = (this._lastYPix ?? this.cy);
+        // map canvas pixels -> CSS transform
         const cssW = this.canvas.clientWidth, cssH = this.canvas.clientHeight;
         const cssX = (x/this.dpr) - cssW/2;
         const cssY = (y/this.dpr) - cssH/2;
-        this.uiX += this.uiAlpha * (cssX - this.uiX);
-        this.uiY += this.uiAlpha * (cssY - this.uiY);
+        this.uiX = this.uiX + this.uiAlpha * (cssX - this.uiX);
+        this.uiY = this.uiY + this.uiAlpha * (cssY - this.uiY);
         this.dotEl.style.transform = `translate(calc(-50% + ${this.uiX}px), calc(-50% + ${this.uiY}px))`;
       }
   
       _onDetected(){
-        // Visual flash + status
+        // flash bg
         document.body.style.background = 'linear-gradient(135deg, #4CAF50 0%, #45a049 100%)';
         setTimeout(() => { document.body.style.background = 'linear-gradient(135deg, #667eea 0%, #764ba2 100%)'; }, 700);
   
+        // status
         const status = document.getElementById('status');
-        status.textContent = '🎉 FULL WRIST REVOLUTION';
-        status.className = 'status detecting';
-        if ('vibrate' in navigator) navigator.vibrate([180,100,180]);
-        setTimeout(() => { status.textContent = 'Listening… draw a small wrist circle'; status.className = 'status active'; }, 1500);
+        if (status) { status.textContent = '🎉 FULL WRIST REVOLUTION'; status.className = 'status detecting';
+          setTimeout(() => { status.textContent = 'Listening… draw a small wrist circle'; status.className = 'status active'; }, 1500);
+        }
   
-        // History entry (ensure the element exists)
+        // history
         const history = document.getElementById('history');
         if (history) {
           const div = document.createElement('div');
@@ -353,10 +331,13 @@
           div.textContent = new Date().toLocaleTimeString() + ': Full revolution';
           history.appendChild(div);
         }
+  
+        // haptics
+        if ('vibrate' in navigator) navigator.vibrate([180,100,180]);
       }
     }
   
-    // ------- Wire up to DeviceMotion -------
+    // ---- wiring (accelerometer only) ----
     let tracer = null, isActive = false;
   
     function startDetection(){
@@ -371,15 +352,15 @@
   
     function start(){
       if (isActive) return;
-      tracer = new ShortMotionTracer(
+      tracer = new AccelCircleOnly(
         document.getElementById('pathCanvas'),
         document.getElementById('gyroDot')
       );
       window.addEventListener('devicemotion', onMotion, { passive: true });
       isActive = true;
   
-      document.getElementById('status').textContent = 'Listening… draw a small wrist circle';
-      document.getElementById('status').className = 'status active';
+      const st = document.getElementById('status');
+      if (st){ st.textContent = 'Listening… draw a small wrist circle'; st.className = 'status active'; }
       document.getElementById('startBtn').style.display = 'none';
       document.getElementById('stopBtn').style.display = 'inline-block';
     }
@@ -389,36 +370,32 @@
       window.removeEventListener('devicemotion', onMotion);
       isActive = false;
   
-      document.getElementById('status').textContent = 'Detection stopped';
-      document.getElementById('status').className = 'status';
+      const st = document.getElementById('status');
+      if (st){ st.textContent = 'Detection stopped'; st.className = 'status'; }
       document.getElementById('startBtn').style.display = 'inline-block';
       document.getElementById('stopBtn').style.display = 'none';
     }
   
     function onMotion(e){
-      const rr = e.rotationRate || {};
       tracer.addSample(
-        rr.beta  || 0,   // X (deg/s)
-        rr.gamma || 0,   // Y (deg/s)
-        rr.alpha || 0,   // Z (deg/s)
         e.acceleration || null,
         e.accelerationIncludingGravity || null
       );
     }
   
     function clearHistory(){
-      const h = document.getElementById('history');
-      if (h) h.innerHTML = '';
+      const h = document.getElementById('history'); if (h) h.innerHTML = '';
       document.getElementById('confidenceBar').style.width = '0%';
       document.getElementById('confidenceText').textContent = 'Revolution progress: 0%';
       if (tracer) tracer.resetCanvas();
     }
   
     window.addEventListener('load', () => {
-      console.log('✅ Path and dot are now clamped inside the circle (with clipping).');
-      console.log('✅ Detection posts to history when progress completes with good coherence/duration.');
+      console.log('▶️ Accelerometer-only circular-motion detector ready.');
+      console.log('Tip: keep the phone’s orientation roughly constant; rotate your wrist in a smooth circle.');
     });
   </script>
+  
   
   
 </body>
