--- a/index.html
+++ b/index.html
@@ -83,44 +83,47 @@
   </div>
 
   <script>
+    // ====== Toggle this while testing ======
+    const DEBUG = true;
+  
+    // ====== Math helpers ======
     const TAU = Math.PI * 2;
     const DEG = Math.PI / 180;
-  
-    // helpers
     const clamp = (x,a,b)=>Math.max(a,Math.min(b,x));
     const unwrap = d => (d > Math.PI ? d - TAU : d < -Math.PI ? d + TAU : d);
+    const hypot3 = (x,y,z)=>Math.sqrt(x*x+y*y+z*z);
     function cross(a,b){ return {x:a.y*b.z - a.z*b.y, y:a.z*b.x - a.x*b.z, z:a.x*b.y - a.y*b.x}; }
-    function norm(v){ const n=Math.hypot(v.x,v.y,v.z)||1; return {x:v.x/n,y:v.y/n,z:v.z/n}; }
+    function norm(v){ const n = hypot3(v.x,v.y,v.z)||1; return {x:v.x/n,y:v.y/n,z:v.z/n}; }
     function median(arr){ if(!arr.length) return 0; const s=[...arr].sort((a,b)=>a-b); const m=Math.floor(s.length/2); return s.length%2?s[m]:(s[m-1]+s[m])/2; }
     function mad(arr, m=null){ if(!arr.length) return 0; if(m==null) m=median(arr); const dev=arr.map(x=>Math.abs(x-m)); return median(dev); }
   
-    class AccelCircleOnly {
+    class AccelCircleStable {
       constructor(canvas, dotEl){
         this.canvas = canvas; this.ctx = canvas.getContext('2d'); this.dotEl = dotEl;
   
-        // ---- Tunables ----
-        // gentler wrist circles
-        this.accPlanarMin = 0.9;     // m/s^2 (was 1.2)
-        this.minOmega = 0.9;         // rad/s ≈ 52°/s (was 1.2)
-        this.progressTarget = TAU * 0.88; // ~316° (was 330°)
-        this.segMinDur = 0.30;       // s
-        this.segMaxDur = 8.00;       // s (allow slower circles)
+        // ----- Tunables (gentle but robust) -----
+        this.accPlanarMin   = 0.8;    // m/s^2 (lower = more sensitive)
+        this.minOmega       = 0.8;    // rad/s (~46°/s)
+        this.progressTarget = TAU*0.90; // ~324°
+        this.segMinDur      = 0.25;   // s
+        this.segMaxDur      = 8.00;   // s
   
-        // radius sanity + stability (reject shakes)
-        this.rMin = 0.04;            // 4 cm
-        this.rMax = 0.35;            // 35 cm
-        this.rStabilityWin = 1.0;    // s
-        this.rCoVMax = 0.40;         // allow gentler variability
+        // Radius sanity + stability (anti-shake)
+        this.rMin = 0.04;  // 4 cm
+        this.rMax = 0.35;  // 35 cm
+        this.rWin = 1.0;   // s window
+        this.rCoVMax = 0.40;
   
-        // **ANTI-SPIN VETO** (blocks phone spinning on table)
-        this.yawSpinVeto = 120;      // deg/s about gravity -> treat as "spin"
-        this.spinLinearThresh = 1.0; // m/s^2 planar accel below this + high yaw = veto
+        // Anti “spin on table” (gyro yaw veto)
+        this.yawSpinVeto = 120;   // deg/s about gravity
+        this.spinLinearThresh = 1.1; // m/s^2 (if planar accel below this + high yaw → veto)
   
-        // gravity LPF (no gyro needed to estimate g)
-        this.gTau = 0.25;            // s
-        this.g = null; this.lastT = 0;
+        // Gravity LPF
+        this.gTau = 0.25; // s
+        this.g = null;    // {x,y,z}
+        this.lastT = 0;
   
-        // state
+        // State
         this.uLP = 0; this.vLP = 0; this.avLP = 0;
         this.theta = 0; this.prevTheta = null;
         this.thetaStart = 0; this.progress = 0;
@@ -128,21 +131,25 @@
         this.segStartT = null; this.lastGoodMs = 0;
         this.gapMsAllow = 280;
   
-        // radius stability buffer
-        this.rBuf = []; // {t, r}
+        this.rBuf = [];   // radius samples {t,r}
+        this.lastRR = {x:0,y:0,z:0}; // for spin veto only
+        this.lastDetectMs = 0; this.cooldownMs = 1500;
   
-        // last gyro (for veto only)
-        this.lastRR = {x:0,y:0,z:0};
-  
-        // UI / canvas
+        // UI/canvas
         this.dpr = Math.max(1, window.devicePixelRatio||1);
         this.uiAlpha = 0.25;
         window.addEventListener('resize', () => { this.resize(); this.resetCanvas(); }, {passive:true});
         this.resize(); this.resetCanvas();
   
-        // detection debounce
-        this.cooldownMs = 1500;
-        this.lastDetectMs = 0;
+        // Lightweight debug line
+        this.debugEl = document.getElementById('debugInfo');
+        if (!this.debugEl && DEBUG) {
+          const host = document.querySelector('.container') || document.body;
+          this.debugEl = document.createElement('div');
+          this.debugEl.id = 'debugInfo';
+          this.debugEl.style.cssText = 'margin-top:6px;font:12px ui-monospace,monospace;opacity:.9';
+          host.appendChild(this.debugEl);
+        }
       }
   
       resize(){
@@ -151,7 +158,10 @@
         this.canvas.height = Math.floor(ch*this.dpr);
         this.w=this.canvas.width; this.h=this.canvas.height;
         this.cx=this.w/2; this.cy=this.h/2;
-        this.padPx=6*this.dpr; this.R=Math.min(this.cx,this.cy)-this.padPx;
+  
+        this.padPx = 6*this.dpr;
+        this.R = Math.min(this.cx, this.cy) - this.padPx;   // drawable radius
+        this.ring = this.R * 0.60;                          // fixed ring for drawing
   
         this.ctx.setTransform(1,0,0,1,0,0);
         this.ctx.lineWidth=2*this.dpr;
@@ -161,12 +171,20 @@
       }
   
       resetCanvas(){
+        // boundary
         this.ctx.clearRect(0,0,this.w,this.h);
-        this.ctx.save(); this.ctx.globalAlpha=0.18;
-        this.ctx.beginPath(); this.ctx.arc(this.cx,this.cy,this.R,0,TAU); this.ctx.stroke(); this.ctx.restore();
-        this.ctx.save(); this.ctx.beginPath(); this.ctx.arc(this.cx,this.cy,this.R - this.ctx.lineWidth*0.5,0,TAU); this.ctx.clip();
+        this.ctx.save();
+        this.ctx.globalAlpha=0.18;
+        this.ctx.beginPath(); this.ctx.arc(this.cx,this.cy,this.R,0,TAU); this.ctx.stroke();
+        this.ctx.restore();
+  
+        // clip
+        this.ctx.save();
+        this.ctx.beginPath(); this.ctx.arc(this.cx,this.cy,this.R - this.ctx.lineWidth*0.5, 0, TAU);
+        this.ctx.clip();
         this.pathStarted=false;
   
+        // reset state
         this.prevTheta=null; this.theta=0; this.thetaStart=0;
         this.progress=0; this.posDur=0; this.negDur=0;
         this.segStartT=null; this.lastGoodMs=0; this.rBuf.length=0;
@@ -174,96 +192,125 @@
         this._renderProgress(); this._moveDot();
       }
   
-      addSample(acc, accG, rr /* {beta, gamma, alpha} in deg/s or undefined */){
+      addSample(acc, accG, rr){
         const now = performance.now();
-        const dt = this.lastT ? Math.max(0.001,(now-this.lastT)/1000) : 0.016;
+        const dt = this.lastT ? Math.max(0.001,(now - this.lastT)/1000) : 0.016;
         this.lastT = now;
   
-        // keep last gyro
         if (rr) this.lastRR = {x: rr.beta||0, y: rr.gamma||0, z: rr.alpha||0};
   
-        // gravity from aInclG
-        if (accG && [accG.x,accG.y,accG.z].every(v=>typeof v==='number')) {
-          if(!this.g) this.g={x:accG.x||0,y:accG.y||0,z:accG.z||0};
-          const a=Math.exp(-dt/this.gTau);
-          this.g.x=a*this.g.x + (1-a)*(accG.x||0);
-          this.g.y=a*this.g.y + (1-a)*(accG.y||0);
-          this.g.z=a*this.g.z + (1-a)*(accG.z||0);
+        // ---- Robust gravity init/update ----
+        // Prefer accelerationIncludingGravity; fallback to acceleration when its magnitude ~ g
+        const axg = accG && Number.isFinite(accG.x) ? accG.x : null;
+        const ayg = accG && Number.isFinite(accG.y) ? accG.y : null;
+        const azg = accG && Number.isFinite(accG.z) ? accG.z : null;
+        const haveAccG = axg!==null && ayg!==null && azg!==null;
+  
+        if (!this.g) {
+          if (haveAccG) {
+            this.g = {x:axg, y:ayg, z:azg};
+          } else if (acc && Number.isFinite(acc.x) && Number.isFinite(acc.y) && Number.isFinite(acc.z)) {
+            const mag = hypot3(acc.x, acc.y, acc.z);
+            if (mag > 7.5) this.g = {x:acc.x, y:acc.y, z:acc.z}; // assume mostly gravity at start
+            else return; // wait until we can initialize
+          } else {
+            return; // no usable data yet
+          }
+        } else {
+          const alpha = Math.exp(-dt/this.gTau);
+          if (haveAccG) {
+            this.g.x = alpha*this.g.x + (1-alpha)*axg;
+            this.g.y = alpha*this.g.y + (1-alpha)*ayg;
+            this.g.z = alpha*this.g.z + (1-alpha)*azg;
+          } else if (acc && Number.isFinite(acc.x)) {
+            // Conservative fallback: only update when near |g|
+            const mag = hypot3(acc.x,acc.y,acc.z);
+            if (mag > 8.5 && mag < 11.5) {
+              this.g.x = alpha*this.g.x + (1-alpha)*acc.x;
+              this.g.y = alpha*this.g.y + (1-alpha)*acc.y;
+              this.g.z = alpha*this.g.z + (1-alpha)*acc.z;
+            }
+          }
         }
-        if(!this.g) return;
   
-        // linear accel
+        // ---- Linear accel and planar projection (ALWAYS compute & draw) ----
         let ax=0, ay=0, az=0;
-        if (acc && [acc.x,acc.y,acc.z].every(v=>typeof v==='number')) { ax=acc.x||0; ay=acc.y||0; az=acc.z||0; }
-        else if (accG) { ax=(accG.x||0)-this.g.x; ay=(accG.y||0)-this.g.y; az=(accG.z||0)-this.g.z; }
+        if (acc && Number.isFinite(acc.x)) { ax=acc.x; ay=acc.y; az=acc.z; }
+        else if (haveAccG) { ax=axg - this.g.x; ay=ayg - this.g.y; az=azg - this.g.z; }
   
-        // plane ⟂ gravity
         const gn = norm(this.g);
         const ref = Math.abs(gn.z)<0.9 ? {x:0,y:0,z:1} : {x:1,y:0,z:0};
-        const e1 = norm(cross(gn,ref)), e2 = cross(gn,e1);
+        const e1 = norm(cross(gn, ref)), e2 = cross(gn, e1);
+  
         const dotg = ax*gn.x + ay*gn.y + az*gn.z;
         const px = ax - dotg*gn.x, py = ay - dotg*gn.y, pz = az - dotg*gn.z;
+  
         const u = px*e1.x + py*e1.y + pz*e1.z;
         const v = px*e2.x + py*e2.y + pz*e2.z;
   
-        // smooth planar vector
-        const beta = Math.exp(-dt/0.06);
+        // Smooth planar vector (keeps dot calm; DRAW ALWAYS)
+        const beta = Math.exp(-dt/0.06); // ~60 ms
         this.uLP = beta*this.uLP + (1-beta)*u;
         this.vLP = beta*this.vLP + (1-beta)*v;
         const aPlanar = Math.hypot(this.uLP, this.vLP);
-        const planarText = document.getElementById('planarA');
-        if (planarText) { this.avLP = 0.9*(this.avLP||0) + 0.1*aPlanar; planarText.textContent = this.avLP.toFixed(2); }
   
-        // planar angle & rate (from accel only)
         const thetaNow = Math.atan2(this.vLP, this.uLP);
-        if (this.prevTheta==null) this.prevTheta = thetaNow;
+        if (this.prevTheta == null) this.prevTheta = thetaNow;
         const dtheta = unwrap(thetaNow - this.prevTheta);
         const omega = Math.abs(dtheta)/dt;
   
-        // instantaneous radius (centripetal)
+        // Draw current point on a fixed ring so you SEE motion even if gate=false
+        const x = this.cx + this.ring * Math.cos(thetaNow);
+        const y = this.cy + this.ring * Math.sin(thetaNow);
+        if (!this.pathStarted) { this.ctx.beginPath(); this.ctx.moveTo(x,y); this.pathStarted = true; }
+        else { this.ctx.lineTo(x,y); this.ctx.stroke(); }
+        this._lastXPix = x; this._lastYPix = y;
+        this._moveDot();
+  
+        // ---- Radius via centripetal relation (for shake rejection)
         let rInst = Infinity;
-        if (omega >= this.minOmega) rInst = aPlanar / (omega*omega + 1e-9);
+        if (omega >= this.minOmega) rInst = aPlanar/(omega*omega + 1e-9);
         this._pushRadius(now, rInst);
         const rStats = this._radiusStats(now);
         const radiusOk = rStats.valid &&
                          rStats.med >= this.rMin && rStats.med <= this.rMax &&
                          rStats.cov <= this.rCoVMax;
   
-        // ---- anti-spin veto (uses gyro if available) ----
-        // project rotationRate onto gravity to get yaw about gn
+        // ---- Anti-spin veto (spin in place on table)
         const w_par_gyro = (this.lastRR.x*gn.x + this.lastRR.y*gn.y + this.lastRR.z*gn.z); // deg/s
         const spinVeto = Math.abs(w_par_gyro) > this.yawSpinVeto && aPlanar < this.spinLinearThresh;
   
-        // ---- gate: only integrate when it looks like a *translation* circle ----
+        // ---- Gate for PROGRESS/DETECTION (drawing is independent)
         const gate = !spinVeto && (aPlanar >= this.accPlanarMin) && (omega >= this.minOmega) && radiusOk;
   
-        if (gate) {
-          if (this.segStartT==null) { this.segStartT=now; this.thetaStart=this.theta; this.posDur=0; this.negDur=0; }
-          this.theta += dtheta;
-          if (dtheta>0) this.posDur+=dt; else if (dtheta<0) this.negDur+=dt;
+        // Debug line
+        if (DEBUG && this.debugEl) {
+          this.debugEl.textContent =
+            `gate:${gate?'1':'0'}  a:${aPlanar.toFixed(2)}  ω:${(omega/DEG).toFixed(0)}°/s  ` +
+            `r:${isFinite(rInst)?rInst.toFixed(2):'∞'}  r_med:${rStats.med.toFixed(2)}  r_cov:${rStats.cov.toFixed(2)}  ` +
+            `yaw:${w_par_gyro.toFixed(0)}°/s veto:${spinVeto?'Y':'N'}`;
+        }
   
-          const traveled = Math.abs(this.theta - this.thetaStart);
+        if (gate) {
+          if (this.segStartT==null) { this.segStartT = now; this.thetaStart = this.theta; this.posDur=0; this.negDur=0; }
+          this.theta += dtheta;
+          if (dtheta>0) this.posDur += dt; else if (dtheta<0) this.negDur += dt;
+  
           const prevProg = this.progress;
+          const traveled = Math.abs(this.theta - this.thetaStart);
           this.progress = Math.min(1, traveled / this.progressTarget);
           this._renderProgress();
   
-          // draw on fixed ring (direction only), keep inside clip
-          const ring = this.R*0.60;
-          const x = this.cx + ring*Math.cos(thetaNow);
-          const y = this.cy + ring*Math.sin(thetaNow);
-          if (!this.pathStarted) { this.ctx.beginPath(); this.ctx.moveTo(x,y); this.pathStarted=true; }
-          else { this.ctx.lineTo(x,y); this.ctx.stroke(); }
-          this._lastXPix=x; this._lastYPix=y;
-          this._moveDot();
-  
-          // edge-trigger detection
+          // Edge-trigger: as soon as we cross 100%, verify & fire
           if (prevProg < 1 && this.progress >= 1) this._maybeDetect(now, rStats);
           this.lastGoodMs = now;
         } else {
+          // allow short gaps, otherwise reset the segment (keeps drawing)
           if (this.segStartT!=null) {
-            if (!this.lastGoodMs) this.lastGoodMs=now;
+            if (!this.lastGoodMs) this.lastGoodMs = now;
             if ((now - this.lastGoodMs) > this.gapMsAllow) this._resetSegment(now);
           }
+          // soften the progress so 100% doesn't stick visually
           this.progress = Math.max(0, this.progress - 0.02);
           this._renderProgress();
         }
@@ -272,12 +319,12 @@
       }
   
       _pushRadius(t, r){
-        const start = t - this.rStabilityWin*1000;
+        const start = t - this.rWin*1000;
         if (isFinite(r)) this.rBuf.push({t, r: clamp(r, 0, 10)});
         while (this.rBuf.length && this.rBuf[0].t < start) this.rBuf.shift();
       }
       _radiusStats(t){
-        const start = t - this.rStabilityWin*1000;
+        const start = t - this.rWin*1000;
         const arr = this.rBuf.filter(x=>x.t>=start).map(x=>x.r);
         if (arr.length < 6) return {valid:false, med:0, cov:1};
         const med = median(arr);
@@ -288,7 +335,7 @@
   
       _maybeDetect(now, rStats){
         const dur = this.segStartT ? (now - this.segStartT)/1000 : 0;
-        const totalTurn = this.posDur + this.negDur;
+        const totalTurn = (this.posDur + this.negDur);
         const signCoh = totalTurn>0 ? Math.max(this.posDur, this.negDur)/totalTurn : 0;
         const withinDur = (dur>=this.segMinDur && dur<=this.segMaxDur);
         const cooled = (now - this.lastDetectMs) > this.cooldownMs;
@@ -308,10 +355,10 @@
   
       _renderProgress(){
         const pct = Math.round(this.progress*100);
-        const bar=document.getElementById('confidenceBar');
-        const txt=document.getElementById('confidenceText');
-        if (bar) bar.style.width=pct+'%';
-        if (txt) txt.textContent=`Revolution progress: ${pct}%`;
+        const bar = document.getElementById('confidenceBar');
+        const txt = document.getElementById('confidenceText');
+        if (bar) bar.style.width = pct + '%';
+        if (txt) txt.textContent = `Revolution progress: ${pct}%`;
       }
   
       _moveDot(){
@@ -325,7 +372,7 @@
       }
   
       _onDetected(){
-        // flash background
+        // flash
         document.body.style.background='linear-gradient(135deg, #4CAF50 0%, #45a049 100%)';
         setTimeout(()=>{ document.body.style.background='linear-gradient(135deg, #667eea 0%, #764ba2 100%)'; }, 700);
   
@@ -349,7 +396,7 @@
       }
     }
   
-    // ---- wiring ----
+    // ====== Wiring ======
     let tracer=null, isActive=false;
   
     function startDetection(){
@@ -363,7 +410,7 @@
   
     function start(){
       if (isActive) return;
-      tracer = new AccelCircleOnly(
+      tracer = new AccelCircleStable(
         document.getElementById('pathCanvas'),
         document.getElementById('gyroDot')
       );
@@ -387,11 +434,10 @@
     }
   
     function onMotion(e){
-      // pass accelerometer + aInclG + rotationRate (for spin veto only)
       tracer.addSample(
         e.acceleration || null,
         e.accelerationIncludingGravity || null,
-        e.rotationRate || null
+        e.rotationRate || null     // only used for the spin veto
       );
     }
   
@@ -402,6 +448,9 @@
       if (tracer) tracer.resetCanvas();
     }
   </script>
+  
+  
+  
   
 </body>
 </html>
